Update app name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flexfuelcalculator
+name: Flex Fuel Calculator
 description: A calculator to compare which it is the better to use, ethanol or gasoline.
 
 # The following defines the version and build number for your application.
