Added android signing config

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Flex Fuel Calculator
+name: flex_fuel_calculator
 description: A calculator to compare which it is the better to use, ethanol or gasoline.
 
 # The following defines the version and build number for your application.
